[package]
name = "rustflight"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0", path = "../embassy-stm32", features = ["defmt", "stm32h7s3l8", "time-driver-tim2", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-sync = { version = "0.6.0", path = "../embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "../embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "../embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.4.0", path = "../embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "proto-ipv6", "dns"] }
embassy-usb = { version = "0.3.0", path = "../embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy-futures" }

[[bin]]
name = "cond_comp"
path = "src/bin/blinky_conditional_compilation.rs"

[features]
stm32h7 = []
stm32h7rs = []